--- a/src/views/CartForm.html
+++ b/src/views/CartForm.html
@@ -147,8 +147,10 @@
         </div>
         
         <form action="cartFinal" method="post" class="bottonForm">
-        <a href="./cartFinal"><button class="botonPago" type="submit" value="submit" form="cartFinal">Enviar</button></a>
-        <button class="botonPago" type="reset"  >Borrar</button>
+        <a href="./cartFinal"><button class= "botonForm" type="submit" value="submit" form="cartFinal">Pagar</button></a>
+        <button class="botonForm" type="reset" >Borrar</button>
+       
+       
         
     </form>
    
