--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,9 +1,6 @@
 <header class="index_header">
-    <a href="#" class="hamburguer-button">
-        <img src="/images/bars-solid.svg" alt="hamburguer" >
-    </a>
+    <%- include('menu_hamburguer') %>
     <img class= "logo" src="/images/logo_turisteando.png" alt="Logo Turisteando">
-    
     <%- include('menu_principal') %>
     <%- include('menu_iconos') %>
                 
