terminado el selector de paquetes

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,7 +3,7 @@
 
     <body>
         <%- include('./partials/header') %>
-        <%- include('./partials/main') %>
+        <%- include('./partials/main', {selector_paquetes}) %>
         
         <section class="paquetes">
             <h3>Paquetes:</h3>
