--- a/public/css/styles_index.css
+++ b/public/css/styles_index.css
@@ -154,26 +154,23 @@ body {
 
 /* Cuerpo principal de los Productos */
 .main {
-    margin: 10px 0;
     /*border: dotted 2px red;*/
+    margin: 10px 0;
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     align-items: flex-start;
 }
-.origen {
-    /*border: dotted 2px blue;*/
-    padding: 2px;
-}
-.paquete {
-    /*border: dotted 2px blue;*/
-    padding: 2px;
-}
-.fecha {
-    /*border: dotted 2px blue;*/padding: 2px;
-    padding: 2px;
+.form_main {
+    /*border: dotted 2px red;*/
+    align-self: flex-start;
+
 }
 .boton_main {
-    /*border: dotted 2px blue;*/
-    align-self: flex-end;
+    /*border: dotted 2px green;*/
+    align-self: flex-start;
+    margin-left: 10px;
+    margin-top: 2px;
 }
 
 /* Seccion de Paquetes y Ofertas */
@@ -182,7 +179,7 @@ body {
 .paquetes h3 {
     /*border: dotted 2px red;*/
     margin: 10px;
-    padding: 3px;
+    padding: 2px;
     
 }
 .productos {
@@ -458,6 +455,25 @@ body {
     .button-menu_hamburgue {
         display: none;
     }
+    .main-nav_hamburger {
+        display: none;
+    }
+    .nav-links_hamburguer {
+        display: none;
+    }
+    .link-item_hamburguer::after {
+        display: none;
+    }
+    .link-item_hamburguer {
+        display: none;
+    }
+    .button-menu_hamburgue_close {
+    
+        display: none;
+    }
+    .main-nav_hamburguer.show{
+        display: none;
+    }
     .index_header {
         justify-content: space-between;
         
@@ -487,7 +503,7 @@ body {
         /*border: dotted 2px red;*/
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: flex-start;
         align-items: flex-start;
         min-height: auto;     /*probando corregir error de espacio en el main index*/
     }
@@ -496,23 +512,13 @@ body {
         flex-direction: row;
         justify-content: space-between;
     }
-    .origen {
-        /*border: dotted 2px blue;*/
-        align-self: flex-start;
-    }
-    .paquete {
-        /*border: dotted 2px rgb(0, 255, 8);*/
-        align-self: flex-start;
-    }
-    .fecha {
-        /*border: dotted 2px rgb(255, 0, 0);*/
-        align-self: flex-start;
-    }
+    
     .main {
         max-width: 778.4px;
     }
     .boton_main {
         /*border: dotted 2px blue;*/
+        padding-left: 6px;
         align-self: flex-start;
     }
 
