--- a/src/views/partials/main.ejs
+++ b/src/views/partials/main.ejs
@@ -1,34 +1,11 @@
 <main class="main">
-    <form class= "form_main" action="/busqueda_paquetes" method="post" id="form_home">
-        <div class="origen">
-            <label for="origen">Origen del viaje: </label>
-            <select name="origen">
-                <option value="buenos_aires">Buenos Aires</option>
-                <option value="rosario">Rosario</option>
-                <option value="cordoba">Córdoba</option>
-                <option value="mendoza">Mendoza</option>
-                <option value="tucuman">Tucumán</option>
-            </select>
-        </div>
-        <div class="paquete">
-            <label for="paquete">Paquetes turísticos: </label>
-            <select name="paquetes">
-                <option value="buenos_aires">Buenos Aires</option>
-                <option value="mendoza">Mendoza</option>
-                <option value="bariloche">Bariloche</option>
-                <option value="calafate">Calafate</option>  
-                <option value="fin_mundo">Fin del Mundo</option>
-                <option value="iguazu">Iguazú</option>
-                <option value="san_rafael">San Rafael</option>
-                <option value="ushuaia">Ushuaia</option>
-            </select name="paquetes">
-        </div>
-        <div class="fecha">
-            <label for="fecha">Fecha del viaje: </label>
-            <input type="date" id="fecha" name="trip-start"
-                value="2022-04-18"
-                min="2022-04-18" max="2022-12-31">
-        </div>
+    <form class= "form_main" action="/productSelect" method="GET" id="form_home">
+            <label for="selector_paquetes">Paquetes turísticos: </label>
+            <select name="paquete">
+                <% for (let selector of selector_paquetes) {%>
+                    <option value="<%= selector.package_id%>"><%= selector.package_title%></option>
+                <% } %>  
+            </select name="paquete">
     </form>
-    <button class= "boton_main" type="submit" form="form_home" value="Submit">Buscar</button>
+    <button class= "boton_main" type="submit" form="form_home" value="Submit">ir al Detalle</button>
 </main>
